# die

./: .gitignore  README-ja.md  README.md  build.zig  build.zig.zon  justfile
.github/workflows/: ci.yml  release.yml
docs/: DESIGN-ja.md  DESIGN.md  ROADMAP.md  STRUCTURE.md
docs/decisions/: DR-0001-spec-and-option-removal.md  DR-0002-pipe-lf-normalization.md  DR-0003-parallel-implementation-language.md  DR-0004-eol-option.md  DR-0005-drop-eol-option-respect-os-textmode.md  DR-0006-n-is-cat-equivalent-default-is-cursor-safe.md  DR-0007-adopt-zig-archive-others.md  DR-0008-stdin-tty-routing-and-help-option.md  DR-0009-exit-code-policy-and-version-option.md  INDEX.md
docs/findings/: 2026-06-27-final-recommendation.md  2026-06-27-language-comparison.md  2026-06-27-optimisation-synthesis.md  2026-06-27-review-go.md  2026-06-27-review-mbt.md  2026-06-27-review-rust.md  2026-06-27-review-zig.md  2026-06-28-tty-detection-cross-os.md
docs/issue/: 2026-06-27-parallel-impl-comparison.md  INDEX.md
docs/issue/archive/: 2026-06-27-parallel-impl-comparison.md
docs/journal/: 2026-06-27-bootstrap-and-parallel-impl.md
docs/research/: 2026-06-27-test-design-research-SYNTHESIS.md  2026-06-27-test-design-research-cc-ecosystem.md  2026-06-27-test-design-research-enforcement.md  2026-06-27-test-design-research-industry-bok.md  2026-06-27-test-design-research-kawaz-repos.md
go/: go.mod  main.go  main_test.go
mbt/: moon.mod.json
rust/: Cargo.toml
rust/src/: main.rs
src/: main.zig
tests/: eol-probe.sh  run.sh  tty.sh
zig/: build.zig
zig/src/: main.zig
(+4 files in other folders)
